{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 22,
  "lineage": "49d47a2b-3d27-cf22-0532-f1b3f0c73e46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae74f6822e5e212c",
            "arn": "arn:aws:ec2:us-east-1:913524941616:elastic-ip/eipalloc-0ae74f6822e5e212c",
            "domain": "vpc",
            "id": "eipalloc-0ae74f6822e5e212c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-55-183-165.compute-1.amazonaws.com",
            "public_ip": "100.55.183.165",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-nat-gateway-eip-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-nat-gateway-eip-us-east-1a",
              "Project": "nsse"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "eipalloc-0ae74f6822e5e212c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06636a5eeb6eb8ca5",
            "arn": "arn:aws:ec2:us-east-1:913524941616:elastic-ip/eipalloc-06636a5eeb6eb8ca5",
            "domain": "vpc",
            "id": "eipalloc-06636a5eeb6eb8ca5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-29-206.compute-1.amazonaws.com",
            "public_ip": "52.71.29.206",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-nat-gateway-eip-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-nat-gateway-eip-us-east-1b",
              "Project": "nsse"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "eipalloc-06636a5eeb6eb8ca5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead177052f1be832",
            "arn": "arn:aws:ec2:us-east-1:913524941616:elastic-ip/eipalloc-0ead177052f1be832",
            "domain": "vpc",
            "id": "eipalloc-0ead177052f1be832",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-163-237-187.compute-1.amazonaws.com",
            "public_ip": "54.163.237.187",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-gateway-eip-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nat-gateway-eip-us-east-1a",
              "Project": "nsse"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "eipalloc-0ead177052f1be832",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030de572945eed2a2",
            "arn": "arn:aws:ec2:us-east-1:913524941616:elastic-ip/eipalloc-030de572945eed2a2",
            "domain": "vpc",
            "id": "eipalloc-030de572945eed2a2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-130-5.compute-1.amazonaws.com",
            "public_ip": "34.194.130.5",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-gateway-eip-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nat-gateway-eip-us-east-1b",
              "Project": "nsse"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "eipalloc-030de572945eed2a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:internet-gateway/igw-0ebd52c3667e7f0f5",
            "id": "igw-0ebd52c3667e7f0f5",
            "owner_id": "913524941616",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-internet-gateway",
              "Project": "nsse"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "igw-0ebd52c3667e7f0f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead177052f1be832",
            "association_id": "eipassoc-07d4c279958753ac7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d09d35fc03dc0180",
            "network_interface_id": "eni-06aa4fe9b2953945d",
            "private_ip": "10.0.0.13",
            "public_ip": "54.163.237.187",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8a9382ad74243b0",
            "tags": {
              "Name": "nsse-vpc-nat-gateway-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-nat-gateway-us-east-1a",
              "Project": "nsse"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "nat-0d09d35fc03dc0180",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030de572945eed2a2",
            "association_id": "eipassoc-011c20dd645e56bde",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d4cb3ad59a37b589",
            "network_interface_id": "eni-09fdea8e685ec1f74",
            "private_ip": "10.0.0.84",
            "public_ip": "34.194.130.5",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06688c6e01d285d60",
            "tags": {
              "Name": "nsse-vpc-nat-gateway-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-nat-gateway-us-east-1b",
              "Project": "nsse"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "nat-0d4cb3ad59a37b589",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:route-table/rtb-04880cde6a21fceb2",
            "id": "rtb-04880cde6a21fceb2",
            "owner_id": "913524941616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d09d35fc03dc0180",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsse-vpc-private-route-table-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-private-route-table-us-east-1a",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtb-04880cde6a21fceb2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:route-table/rtb-06dc9d5a7d5081fc5",
            "id": "rtb-06dc9d5a7d5081fc5",
            "owner_id": "913524941616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4cb3ad59a37b589",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsse-vpc-private-route-table-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-private-route-table-us-east-1b",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtb-06dc9d5a7d5081fc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:route-table/rtb-0a9a9782823346019",
            "id": "rtb-0a9a9782823346019",
            "owner_id": "913524941616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebd52c3667e7f0f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsse-vpc-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-public-route-table",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtb-0a9a9782823346019",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ab13915a44271d5",
            "region": "us-east-1",
            "route_table_id": "rtb-04880cde6a21fceb2",
            "subnet_id": "subnet-087db21a10bc67c3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtbassoc-05ab13915a44271d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08de9e463d4338300",
            "region": "us-east-1",
            "route_table_id": "rtb-06dc9d5a7d5081fc5",
            "subnet_id": "subnet-0f9acfa12710f6fbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtbassoc-08de9e463d4338300",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea73bc70ff58942",
            "region": "us-east-1",
            "route_table_id": "rtb-0a9a9782823346019",
            "subnet_id": "subnet-0f8a9382ad74243b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtbassoc-0cea73bc70ff58942",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b0397d5a247d7f2",
            "region": "us-east-1",
            "route_table_id": "rtb-0a9a9782823346019",
            "subnet_id": "subnet-06688c6e01d285d60"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "rtbassoc-02b0397d5a247d7f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:subnet/subnet-087db21a10bc67c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087db21a10bc67c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524941616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-private-subnet-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-private-subnet-us-east-1a",
              "Project": "nsse",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "subnet-087db21a10bc67c3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:subnet/subnet-0f9acfa12710f6fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9acfa12710f6fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524941616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-private-subnet-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-private-subnet-us-east-1b",
              "Project": "nsse",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "subnet-0f9acfa12710f6fbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:subnet/subnet-0f8a9382ad74243b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8a9382ad74243b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524941616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-public-subnet-us-east-1a",
              "Project": "nsse"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "subnet-0f8a9382ad74243b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:subnet/subnet-06688c6e01d285d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06688c6e01d285d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524941616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc-public-subnet-us-east-1b",
              "Project": "nsse"
            },
            "vpc_id": "vpc-0995fd5fd9404a8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "subnet-06688c6e01d285d60",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913524941616:vpc/vpc-0995fd5fd9404a8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c4ffe6a6b825dd74",
            "default_route_table_id": "rtb-0b6167a600b2512b4",
            "default_security_group_id": "sg-0fa49fc7ceb84a7fb",
            "dhcp_options_id": "dopt-071770562148b4ea5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0995fd5fd9404a8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6167a600b2512b4",
            "owner_id": "913524941616",
            "region": "us-east-1",
            "tags": {
              "Name": "nsse-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nsse-vpc",
              "Project": "nsse"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "913524941616",
            "id": "vpc-0995fd5fd9404a8d3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}